# learn-probability-statistics

./: README.md  pyproject.toml
books/: lesson1-basic-concepts.ipynb
books/probability/: lession2-operations-on-events.ipynb  lesson1-basic-concepts.ipynb
books/statistics/: histograms.ipynb  normal-distribution.ipynb
draws/: lesson2.drawio
